ift/include/iftDataSet.h

/**
 * @brief Distance function between two arrays prototype.
 * The alpha coefficients alpha can be used to modify the arc weight
computation in many different ways. These coefficients can be found
by optimization.
 * @date may, 2016
 * @author Peixinho
 */
typedef float (*iftArcWeightFun)(float *f1, float *f2, float *alpha, int n);
/**
 * @brief A sample in a Pattern Recognition problem.
 * Contains the feature descriptor and, for supervised cases, the sample class.
 * @date May, 2016
 * @author Peixinho
 */
//! swig(extend = iftSampleExt.i)
typedef struct ift_sample {
    float *feat;    // feature values - it should be always a pointer to data in iftDataSet struct
    double *projection;
    int truelabel;   // 1,2,...,nclasses
    int label;   // 1,2,....,nclasses
    int id;      // identification which may be either a voxel or the sample's index in the file set
    int group; // 1,2,...,nClusters (used for OPF_unsup)
    // related image or the position of an image in the
    // directory with a related list of images.
    bool isSupervised;
    bool isLabelPropagated;
    int numberTimesChecked;

    float weight;  // probability density, path cost, etc
    uint status;   // Status of the sample: TEST, IFT_TRAIN, IFT_ERROR, IFT_OUTLIER.
} iftSample;
/**
 * @brief Structure used for feature space transformations based on PCA
 * @author Peixinho
 * @date May, 2016
 */
typedef struct _featspaceparam {
  float *mean, *stdev; // parameters used for feature space normalization and centralization
  int nfeats; // size of mean, stdev
  char *w; // binary vector that indicates selected components for SupPCA
  int ncomps; // size of w (number of PCA components before
  // feature space reduction by SupPCA)
  iftMatrix *R; // Projection/rotation matrix (the columns are the eigenvectors)
  iftMatrix *W; // Whitening Transformation
} iftFeatSpaceParam;
//! swig()
typedef enum {
  IFT_REF_DATA_NULL, IFT_REF_DATA_IMAGE, IFT_REF_DATA_FIMAGE, IFT_REF_DATA_MIMAGE, IFT_REF_DATA_FILESET, IFT_REF_DATA_MMKERNEL,
  IFT_REF_DATA_CSV
} iftRefDataType;
/**
 * @brief Dataset structure for pattern recognition.
 * @author Peixinho
 * @date May, 2016
 * Contains a list of samples. Each sample containing the description features. And, for supervised cases, the sample class.
 * See also ::iftSample.
 * @ingroup MachineLearning
 */
//! swig(destroyer = iftDestroyDataSet, extend = iftDataSetExt.i)
typedef struct ift_dataset {
    iftSample *sample;   // sample
    int capacity; //max number of samples (pre allocates this space)
    int nfeats;   // number of features
    int nsamples; // number of samples
    int ngroups;  // number of clusters
    int nclasses; // number of ground truth classes
    int ntrainsamples; // number of training samples
    iftArcWeightFun iftArcWeight; // distance function
    int function_number; // This field is used to store the ID of the distance function set with iftSetDistanceFunction. It allows the
    // proper setting of the distance function when using iftWriteOPFDataset and iftReadOPFDataset
    float *alpha;   // coefficients used for arc weight computation
    iftRefDataType ref_data_type; // type of the Reference Data (mainly used to read and write datasets)
    void *ref_data; // it might be an image, for voxel datasets, a text file with image filenames, for image datasets, a region graph, for supervoxel datasets, etc.
    iftFeatSpaceParam fsp; // parameters of the feature scape transformation
    iftMatrix* data;
    iftDoubleMatrix* projection;
} iftDataSet;
/**
 * @brief Destroys a dataset object (and destroy their Sample Feature Vectors).
 * @author Peixinho
 * @date May, 2016
 * @param Z Dataset to be destroyed.
 */
void iftDestroyDataSet(iftDataSet **Z);
/**
 * @brief Reads an OPF Dataset.
 * @author Samuel Martins
 * @date Jun 28, 2016
 *
 * @param  pathname Dataset's pathname.
 * @return          Loaded Dataset.
 */
iftDataSet *iftReadOPFDataSet(const char *pathname);